--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bump:patch": "cd svdm && pnpm version patch --no-workspaces-update && cd ..",
     "bump:minor": "cd svdm && pnpm version minor --no-workspaces-update && cd ..",
     "bump:major": "cd svdm && pnpm version major --no-workspaces-update && cd ..",
+    "release:rc": "cd svdm && pnpm publish --tag rc && cd ..",
+    "release:stable": "cd svdm && pnpm publish && cd ..",
     "test": "pnpm -F svdm jest",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --check . --write"
